--- a/gabriel mainardes/aula1.html
+++ b/gabriel mainardes/aula1.html
@@ -18,6 +18,19 @@
 <!--p e paragrafo-->
 </p>
 <img src="images.jfif" alt="">
+<p><b>MASS INFECTION</b></p>
+<p>Após um tempo de preparação de 1,7s , 1x1x1x1 pega suas duas espadas e executa uma divisão horizontal com elas, criando uma onda de choque aguda que dura 6s e causa 35 de dano por golpe naqueles atingidos.</p>
+<img src="Massinfectionability.webp" alt="">
+<p><b>ENTANGLEMENT</b></p>
+<p>pós um tempo de preparação de 0,75 s , 1x1x1x1 arremessa suas duas espadas, que têm uma vida útil de 10 s , para frente a uma velocidade de 125 pinos por segundo. Se atingir um sobrevivente, causa 10 de dano, e 1x1x1x1 ganha Velocidade II por 3 s.</p>
+<img src="Entanglementability.webp" alt="">
+<p><b>UNSTABLE EY</b></p>
+<p>1x1x1x1 perfura seus olhos vermelhos brilhantes e os rasga, revelando as auras de todos os sobreviventes vivos e aplica Velocidade I por 6,5s, enquanto também aplica Cegueira III por 6,5s.</p>
+<img src="Unstableeyeability.webp" alt="">
+<p><b>REJUVENATE THE ROTTEN</b></p>
+<p>1x1x1x1 se esfaqueia com suas espadas e os puxa para fora, ressuscitando todos os jogadores que eles mataram na forma de zumbis podres que os servem.</p>
+<img src="Rejuvenatetherotten.webp" alt="">
 </body>
+
 
 </html>
